--- a/style.css
+++ b/style.css
@@ -85,22 +85,10 @@ body {
     flex-direction: column;
     justify-content: center;
     max-width: 100%;
-    min-height: 1080px;
+    height: 100vh;
     background-image: url(bg-images/2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-}
-
-@media (max-width: 543px) {
-    .enter {
-        max-width: 400px;
-    }
-}
-
-@media (max-width: 437px) {
-    .enter {
-        max-width: 300px;
-    }
 }
 
 .cityScreen {
@@ -109,8 +97,30 @@ body {
     justify-content: center;
     align-items: center;
     width: 100%;
-    min-height: 1080px;
+    height: 100vh;
     backdrop-filter: blur(5px);
+}
+
+.tokio {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 100%;
+    height: 100vh;
+    background-image: url(bg-images/3.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.miami {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 100%;
+    height: 100vh;
+    background-image: url(bg-images/4.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .buttons {
@@ -123,57 +133,30 @@ body {
     right: 320px;
 }
 
-@media (max-width: 715px) {
-    .weather_card {
-        display: flex;
-        flex-direction: column;
-        max-width: 402px;
-        max-height: 661px;
-        background-color: #FFFFFF;
-        border: 1px solid #FFFFFF;
-        border-radius: 10px;
-    }
-    .weather_card__chilly {
-        max-width: 347px;
-        max-height: 347px;
-        margin-top: 25px;
-        margin-right: 25px;
-        margin-left: 25px;
-        background-image: url(forecast-images/chilly.jpg);
-        background-position: 50% 90%;
-        background-repeat: no-repeat;
-        background-size: cover;
-        border-radius: 50%;   
-    }
-    .weather_card__temperature::after {
-        content: '';
-        position: relative;
-        margin-left: auto;
-        margin-right: auto;
-        bottom: 40px;
-        width: 87px;
-        border-bottom: 3px solid #FFFFFF;
-    }
-    .cityScreen {
-        display: flex;
-        flex-direction: column-reverse;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        min-height: 1080px;
-        backdrop-filter: blur(5px);
-    }
-    .buttons {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        min-width: 220px;
-        position: fixed;
-        top: unset;
-        left: unset;
-        right: unset;
-        bottom: 10px;
-    }
+.button {
+    width: 75px;
+    height: 75px;
+    border: 1px solid gray;
+    background-color: #FFFFFF;
+    border-radius: 50%;
+}
+
+.button__back:before {
+    content: '';
+    position: relative;
+    left: 22px;
+    display: block;
+    width: 20px;
+    height: 20px;
+    border-left: 3px solid #B0B0B0;
+    border-bottom: 3px solid #B0B0B0;
+    transform: rotate(45deg);
+}
+
+.button__search:before {
+    content: '';
+    position: relative;
+    content: url(icons/search.png);
 }
 
 .weather_card {
@@ -203,61 +186,29 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     font-family: 'Reem Kufi Ink';
     font-style: normal;
     font-weight: 400;
-    font-size: 100px;
+    font-size: 120px;
     letter-spacing: 0.015em;
     text-transform: uppercase;
     color: #FFFFFF;
 }
 
-.tokio {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    max-width: 100%;
-    min-height: 1080px;
-    background-image: url(bg-images/3.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.miami {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    max-width: 100%;
-    min-height: 1080px;
-    background-image: url(bg-images/4.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.button {
-    width: 75px;
-    height: 75px;
-    border: 1px solid gray;
-    background-color: #FFFFFF;
-    border-radius: 50%;
-}
-
-.button:nth-child(1):before {
+.weather_card__temperature::after {
     content: '';
     position: relative;
-    left: 22px;
-    display: block;
-    width: 20px;
-    height: 20px;
-    border-left: 3px solid #B0B0B0;
-    border-bottom: 3px solid #B0B0B0;
-    transform: rotate(45deg);
+    margin-left: auto;
+    margin-right: auto;
+    bottom: 40px;
+    width: 87px;
+    border-bottom: 3px solid #FFFFFF;
 }
 
-.button:nth-child(2):before {
-    content: '';
+.weather_card__picture {
     position: relative;
-    content: url(icons/search.png);
+    bottom: 160px;
 }
 
 .weather__picture--rainy {
@@ -284,21 +235,6 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 50%;   
-}
-
-.weather_card__picture {
-    position: relative;
-    bottom: 140px;
-}
-
-.weather_card__temperature::after {
-    content: '';
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    bottom: 35px;
-    width: 87px;
-    border-bottom: 3px solid #FFFFFF;
 }
 
 .weather_card__city_name {
@@ -361,4 +297,88 @@ body {
     letter-spacing: 0.015em;
     text-transform: uppercase;
     color: #323232;
+}
+
+@media (max-width: 543px) {
+    .enter {
+        max-width: 400px;
+    }
+}
+
+@media (max-width: 437px) {
+    .enter {
+        max-width: 300px;
+    }
+}
+
+@media (max-width: 715px) {
+    .weather_card {
+        display: flex;
+        flex-direction: column;
+        max-width: 402px;
+        max-height: 661px;
+        background-color: #FFFFFF;
+        border: 1px solid #FFFFFF;
+        border-radius: 10px;
+    }
+    .weather_card__chilly {
+        max-width: 347px;
+        max-height: 347px;
+        margin-top: 25px;
+        margin-right: 25px;
+        margin-left: 25px;
+        background-image: url(forecast-images/chilly.jpg);
+        background-position: 50% 90%;
+        background-repeat: no-repeat;
+        background-size: cover;
+        border-radius: 50%;   
+    }
+    .weather_card__temperature {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-family: 'Reem Kufi Ink';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 100px;
+        letter-spacing: 0.015em;
+        text-transform: uppercase;
+        color: #FFFFFF;
+    }
+    
+    .weather_card__temperature::after {
+        content: '';
+        position: relative;
+        margin-left: auto;
+        margin-right: auto;
+        bottom: 35px;
+        width: 87px;
+        border-bottom: 3px solid #FFFFFF;
+    }
+    
+    .weather_card__picture {
+        position: relative;
+        bottom: 135px;
+    }
+    .cityScreen {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        max-height: 100vh;
+        backdrop-filter: blur(5px);
+    }
+    .buttons {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        min-width: 220px;
+        position: fixed;
+        top: unset;
+        left: unset;
+        right: unset;
+        bottom: 10px;
+    }
 }
