--- a/style.css
+++ b/style.css
@@ -59,15 +59,6 @@ body {
     color: #FFFFFF;
 }
 
-@keyframes fadeIn {
-    0% { 
-        opacity: 0.5; 
-    }
-    100% { 
-        opacity: 1; 
-    }
-}
-
 .menu {
     display: flex;
     flex-direction: column;
@@ -77,8 +68,9 @@ body {
     background-image: url(bg-images/1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    opacity: 0.5; 
-    animation: fadeIn 1s forwards;
+    transition: 1s ease-in-out;
+    opacity: 1;
+    visibility: visible;
 }
 
 .mainScreen {
@@ -100,8 +92,9 @@ body {
     background-image: url(bg-images/2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    opacity: 0.5; 
-    animation: fadeIn 1s forwards;
+    transition: 1s ease-in-out;
+    opacity: 1;
+    visibility: visible;
 }
 
 .cityScreen {
@@ -112,6 +105,15 @@ body {
     width: 100%;
     height: 100vh;
     backdrop-filter: blur(5px);
+}
+
+.hidden {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.none {
+    display: none;
 }
 
 .tokio {
@@ -310,14 +312,6 @@ body {
     letter-spacing: 0.015em;
     text-transform: uppercase;
     color: #323232;
-}
-
-.hidden {
-    display: none;
-}
-
-.show {
-    display: flex;
 }
 
 @media (max-width: 543px) {
